inseriti img e button

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="it">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dom</title>
 </head>
+
 <body>
-   
+    <img id="lampadina" src="./img/white_lamp.png" alt="Lampadina spenta">
+    <button id="interruttore">Accendi</button>
 
 
 
-   <script src="./main.js"></script>
+    <script src="./main.js"></script>
 </body>
+
 </html>
